-
Bug
-
Resolution: Done
-
P2: Important
-
5.11.0 Beta 4
During the NFC communication there are some warnings in the log:
(null):0 ((null)): default : QMetaObject::invokeMethod: No such method NearFieldTarget::requestCompleted(QNearFieldTarget::RequestId&)
04-26 09:11:25.821 15281 15302 W AusweisApp2: Candidates are:
04-26 09:11:25.821 15281 15302 W AusweisApp2: requestCompleted(QNearFieldTarget::RequestId)
I can find 2 lines in src/nfc/qnearfieldtarget_android.cpp:
QMetaObject::invokeMethod(this, "requestCompleted", .....
In src/nfc/qnearfieldtarget.h is a signal, but i can not find a method:
void requestCompleted(const QNearFieldTarget::RequestId &id);
Even if invokeMethod fails, all is working fine. I am working on understanding what the calls to invokeMethod should do.
Maybe https://codereview.qt-project.org/#/c/210210/ has an influence?
| For Gerrit Dashboard: QTBUG-67958 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 232746,2 | Fix "QMetaObject::invokeMethod: No such method" | 5.11 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
| 232871,3 | Introduce reportError to fix "QMetaObject::invokeMethod: No such method" | 5.11 | qt/qtconnectivity | Status: ABANDONED | 0 | 0 |
| 232874,5 | Fix "QMetaObject::invokeMethod: No such method" for ndefMessageRead | 5.11 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
| 234673,3 | Introduce reportError to fix "QMetaObject::invokeMethod: No such method" | dev | qt/qtconnectivity | Status: MERGED | +2 | 0 |