Fix "QMetaObject::invokeMethod: No such method"

Task-number: QTBUG-67958
Change-Id: I03dbf411d6a1b2a710d13c1eb5f1f75d594d2a9a
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
Reviewed-by: André Klitzing <aklitzing@gmail.com>